--- a/index.html
+++ b/index.html
@@ -139,9 +139,13 @@
 						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
 					</div>
 				</header>
+				 <!--style="border: 3px solid red;-->
 				<div class="content dark style3">
 					<div class="container">
-						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
+								<div style="text-align: center;">
+									<iframe style="margin: -15% 0% auto;" src="https://widgets.cloudstitch.com/etc276/d3-bubble-chart/standalone" width="1000" height="700"
+									 scrolling="no" ></iframe>
+								</div>
 						<div class="row">
 							<div class="4u 12u(narrow)">
 								<h3>Diam vivamus turpis lorem sodales lectus ornare</h3>
@@ -359,6 +363,10 @@
 				</div>
 			</section>
 		-->
+		
+		<!--<div style="text-align: center;">
+			<iframe style="margin: auto;" src="https://widgets.cloudstitch.com/etc276/d3-bubble-chart/standalone" width="1000" height="700" scrolling="no"></iframe>
+		</div>-->
 
 <!-- D3.JS -->
 			<section id="fourth" class="main">
@@ -444,15 +452,12 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/laochanlam/Refugee-Statistics" class="icon fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>HONG DE YUNG<br><br>F74044020</li><li>LAO CHON LAM<br><br>F74045034</li>
+
 					</ul>
 				</div>
 			</section>
