--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>難民議題─資料視覺化</h1>
+					<h1>難民議題─利用D3.js將資料視覺化</h1>
 					<p>資訊 108 洪得揚 劉俊林</p>
 				</header>
 				<footer>
@@ -33,7 +33,14 @@
 					<div class="container">
 						<h2>前情提要</h2>
 						<p>
-廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文廢文
+2016年，敘利亞的難民和其收容處仍持續的需要保護和援助，同時需求也越趨複雜。</br>
+雖然難民人口在 2016 年的增長速度比往年要慢，但截至2016年底，土耳其，黎巴嫩，約旦， 
+伊拉克和埃及的難民人口仍高達490萬以上，顯示出這個區域尚未脫離發展危機。
+而這些 "東道主" 表現出極大的慷慨，成為難民議題中第一個，也是最重要的回應者。
+</br> </br>
+由於龐大的難民數量意謂著可觀的支出，所以我們決定從經費下手。</br>
+將<a href="http://data.unhcr.org/syrianrefugees/regional.php">聯合國難民署</a>
+的資料視覺化之後，可以更了解對於難民來說，他們需要的是哪些幫助。
 						</p>
 					</div>
 				</header>
@@ -47,7 +54,9 @@
 										<h3>PROTECTION</h3>
 									</header>
 									<p>
-										保護廢文
+短短 4年，敘利亞有超過 20萬人不幸在戰火中身亡，這如今已難說明的戰爭，源自於一場反政府的示威活動，
+而民眾的怒火最終也升溫成全面發動的內戰。若說誰是最大的受害者，莫過於超過 1,100萬名夾在政府軍和反政府軍戰火間的居民，
+他們被迫逃離家園流離失所，更糟的是，現在因為伊斯蘭國分子的侵略，這場內戰情勢更形嚴峻。
 									</p>
 								</section>
 							</div>
@@ -58,7 +67,10 @@
 										<h3>FOOD SECURITY</h3>
 									</header>
 									<p>
-										食物廢文
+法新社報導，阿勒頗的食物和醫藥短缺情況惡化。西方指責敘、俄犯下戰爭罪。
+俄羅斯反駁說，美、英代表使用的字眼無法令其接受。阿勒頗停火希望越加渺茫。
+在大街上食物價格飛漲。法新社記者發現，麵包價格比上週增加了70％。
+一些商品，如糖，已經買不到。有著四個孩子的哈桑‧亞辛說：「我們現在一天只吃一頓飯。我的孩子和我已經兩個星期沒有吃飽過。」
 									</p>
 								</section>
 							</div>
@@ -89,9 +101,9 @@
 			<section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>讓我們先用項目做區分</h2>
+						<h2>讓我們先用國家做區分</h2>
 						<p>
-							項目廢文
+							國家廢文
 						</p>
 					</div>
 				</header>
@@ -100,9 +112,9 @@
 						<div class="row">
 							<div class="4u 12u(narrow)">
 								<section>
-									<h3>項目啦</h3>
+									<h3>國家啦</h3>
 									<p>
-										項目廢文
+										國家廢文
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
@@ -128,9 +140,9 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>再來用國家做區分</h2>
+						<h2>再來用項目做區分</h2>
 						<p>
-							國家廢文
+							項目廢文
 						</p>
 					</div>
 				</header>
@@ -143,19 +155,19 @@
 								</div>
 						<div class="row">
 							<div class="4u 12u(narrow)">
-								<h3>國家啦</h3>
+								<h3>項目啦</h3>
 								<p>
-									國家廢文1
+									項目廢文1
 								</p>
 							</div>
 							<div class="4u 12u(narrow)">
 								<p>
-									國家廢文2
+									項目廢文2
 								</p>	
 							</div>
 							<div class="4u 12u(narrow)">
 								<p>
-									國家廢文3
+									項目廢文3
 								</p>
 								<footer>
 									<a href="#fourth" class="button scrolly">Next Page</a>
