--- a/index.html
+++ b/index.html
@@ -123,12 +123,9 @@
 							</div>
 							<div class="8u 12u(narrow)">
 								<div class="row">
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-									<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
+
+																		<iframe style="margin-left: -7%; margin-top: -5%; margin-bottom:-20%" src="https://widgets.cloudstitch.com/etc276/d3-grouped-bar-chart-1/standalone" width="1000"
+																		 height="700" scrolling="no"></iframe>
 								</div>
 							</div>
 						</div>
