Line graph container pattern switch

--- a/index.html
+++ b/index.html
@@ -112,26 +112,19 @@
 				</header>
 				<div class="content dark style2">
 					<div class="container">
-						<div class="row">
-							<div class="4u 12u(narrow)">
-								<section>
+													<div style="text-align: center;">
+														<iframe style="margin-bottom: -13%;margin-top: -7%" src="https://widgets.cloudstitch.com/etc276/d3-grouped-bar-chart-1/standalone" width="1000"
+														 height="700" scrolling="no"></iframe>
+
+								<section>									
 									<h3>國家啦</h3>
 									<p>
-										國家廢文
+										國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
 									</footer>
 								</section>
-							</div>
-							<div class="8u 12u(narrow)">
-								<div class="row">
-
-																		<iframe style="margin-left: -14%; margin-top: -5%; margin-bottom:-20%" src="https://widgets.cloudstitch.com/etc276/d3-grouped-bar-chart-1/standalone" width="1000"
-																		 height="700" scrolling="no"></iframe>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
