--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Tessellate by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>機率與統計 final project</title>
@@ -11,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/font.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -49,7 +45,7 @@
 						<div class="row">
 							<div class="4u 12u(narrow)">
 								<section>
-									<span class="feature-icon"><span class="icon fa-clock-o"></span></span>
+									<span class="feature-icon"><span class="icon fa-globe"></span></span>
 									<header>
 										<h3>PROTECTION</h3>
 									</header>
@@ -62,7 +58,7 @@
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
-									<span class="feature-icon"><span class="icon fa-bolt"></span></span>
+									<span class="feature-icon"><span class="icon fa-cutlery"></span></span>
 									<header>
 										<h3>FOOD SECURITY</h3>
 									</header>
@@ -76,7 +72,7 @@
 							</div>
 							<div class="4u 12u(narrow)">
 								<section>
-									<span class="feature-icon"><span class="icon fa-cloud"></span></span>
+									<span class="feature-icon"><span class="icon fa-child"></span></span>
 									<header>
 										<h3>EDUCATION</h3>
 									</header>
