--- a/index.html
+++ b/index.html
@@ -368,9 +368,20 @@
 			<section id="fourth" class="main">
 				<header>
 					<div class="container">
-						<h2>Sed feugiat ipsum consequat</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>總結</h2>
+						<p>
+							這次的 final project，我們決定用難民當作我們的統計目標之後，
+							在聯合國難民署找到了一份 2106 年 3RP 的年度報表，並找到了一些可以用的數據。
+							之後學習使用 D3.js 建構出一個網頁，也嘗試了不同生成圖表的方式，上述兩張圖表的
+							藉由使用 D3 in box 工具將 js 檔和 data 分開，若要修改資料，只要到雲端修改 excel 即可。
+							而下方的動態圖表則是使用 d3js.org 所提供的 example ，將資料寫在 html 檔裡。
+							而這些圖表有助於我們更快理解各項數據以及其分布，要跟他人分享時也更為方便。
+							做為資料視覺化的初學者，我們也在這次的 project 中學習到如何有效的呈現數據，
+							並利用 github 分工去共同完成一個網頁，算是相當不錯的體驗。
+							</br>
+							</br>
+							下方圖表為整合長條圖與圓餅圖的特性，讓數據的顯示更為直觀。
+						</p>
 					</div>
 				</header>
 				<div class="content style4 featured">
@@ -508,10 +519,10 @@
 				<script>
 							function dashboard(id, fData) {
 								var barColor = 'steelblue';
-								function segColor(c) { return { low: "#807dba", mid: "#e08214", high: "#41ab5d" }[c]; }
+								function segColor(c) { return { Protection: "#807dba", Food: "#e08214", Education: "#41ab5d" }[c]; }
 
 								// compute total for each state.
-								fData.forEach(function (d) { d.total = d.freq.low + d.freq.mid + d.freq.high; });
+								fData.forEach(function (d) { d.total = d.freq.Protection + d.freq.Food + d.freq.Education; });
 
 								// function to handle histogram.
 								function histoGram(fD) {
@@ -549,14 +560,14 @@
 										.attr("width", x.rangeBand())
 										.attr("height", function (d) { return hGDim.h - y(d[1]); })
 										.attr('fill', barColor)
-										.on("mouseover", mouseover)// mouseover is defined below.
-										.on("mouseout", mouseout);// mouseout is defined below.
+										.on("mouseover", mouseover)// mouseover is defined beProtection.
+										.on("mouseout", mouseout);// mouseout is defined beProtection.
 
 									//Create the frequency labels above the rectangles.
 									bars.append("text").text(function (d) { return d3.format(",")(d[1]) })
 										.attr("x", function (d) { return x(d[0]) + x.rangeBand() / 2; })
 										.attr("y", function (d) { return y(d[1]) - 5; })
-										.attr("text-anchor", "middle");
+										.attr("text-anchor", "Fooddle");
 
 									function mouseover(d) {  // utility function to be called on mouseover.
 										// filter for selected state.
@@ -693,7 +704,7 @@
 								}
 
 								// calculate total frequency by segment for all state.
-								var tF = ['low', 'mid', 'high'].map(function (d) {
+								var tF = ['Protection', 'Food', 'Education'].map(function (d) {
 									return { type: d, freq: d3.sum(fData.map(function (t) { return t.freq[d]; })) };
 								});
 
@@ -709,16 +720,11 @@
 
 				<script>
 					var freqData = [
-						{ State: 'AL', freq: { low: 4786, mid: 1319, high: 249 } }
-						, { State: 'AZ', freq: { low: 1101, mid: 412, high: 674 } }
-						, { State: 'CT', freq: { low: 932, mid: 2149, high: 418 } }
-						, { State: 'DE', freq: { low: 832, mid: 1152, high: 1862 } }
-						, { State: 'FL', freq: { low: 4481, mid: 3304, high: 948 } }
-						, { State: 'GA', freq: { low: 1619, mid: 167, high: 1063 } }
-						, { State: 'IA', freq: { low: 1819, mid: 247, high: 1203 } }
-						, { State: 'IL', freq: { low: 4498, mid: 3852, high: 942 } }
-						, { State: 'IN', freq: { low: 797, mid: 1849, high: 1534 } }
-						, { State: 'KS', freq: { low: 162, mid: 379, high: 471 } }
+						{ State: 'Turkey', freq: { Protection: 28, Food: 87, Education: 111 } }
+						, { State: 'Lebanon', freq: { Protection: 113, Food: 220, Education: 253 } }
+						, { State: 'Jordan', freq: { Protection: 96, Food: 202, Education: 103 } }
+						, { State: 'Iraq', freq: { Protection: 25, Food: 12, Education: 32 } }
+						, { State: 'Egypt', freq: { Protection: 12, Food: 18, Education: 7 } }
 					];
 
 					dashboard('#dashboard', freqData);
