--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<div class="container">
 						<h2>讓我們先用國家做區分</h2>
 						<p>
-							國家廢文
+							圖中的五個國家分為 Turkey, Lebanon, Jordan, Iraq, Egypt
 						</p>
 					</div>
 				</header>
@@ -113,12 +113,13 @@
 														 height="700" scrolling="no"></iframe>
 
 								<section>									
-									<h3>國家啦</h3>
+									<h3> </h3>
 									<p>
-										國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文國家廢文
+										圖中的不同顏色代表不同的項目，但 x軸是使用國家做為區分，
+										也就是同一個國家的資料在同一個 group 裡。綜觀整張圖來看，lebanon 各項的支出幾乎都是最高，而新聞中常出現的伊拉克、埃及等國家，其實在難民這方面支出的經費其實並不算多。
 									</p>
 									<footer>
-										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
+										<a href="#third" class="button scrolly">Next Page</a>
 									</footer>
 								</section>
 					</div>
@@ -730,7 +731,7 @@
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
-						<li>HONG DE YUNG<br><br>F74044020</li><li>LAO CHON LAM<br><br>F74045034</li>
+						<li>HONG DE YANG<br><br><a href="http://moodle.ncku.edu.tw/user/view.php?id=90175&course=88006">F74044020</a></li><li>LAO CHON LAM<br><br><a href="http://moodle.ncku.edu.tw/user/view.php?id=89318&course=88006">F740445034</a></li>
 
 					</ul>
 				</div>
