--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 				<div id='dashboard'>
 				</div>
 				
-				<script src="http://d3js.org/d3.v3.min.js"></script>
+				<script src="assets/js/d3.js"></script>
 				<script>
 							function dashboard(id, fData) {
 								var barColor = 'steelblue';
